# addon-item-warehouse-wesbite

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  Makefile  package-lock.json  package.json  pyproject.toml  repository.yaml  sonar-project.properties
.github/: release-drafter.yml
.github/workflows/: ci_deployment.yml  ci_validation.yml  create_new_release.yml  eslint.yml  publish_release.yml
.husky/: pre-commit
components/: Paginator.client.tsx  Sidebar.server.tsx
item_warehouse/: config.yaml  docker-compose.yml  run.sh
item_warehouse/src/: requirements.txt
item_warehouse/src/api/: _dependencies.py  crud.py  database.py  exceptions.py  main.py  models.py
item_warehouse/src/app/: _dependencies.py  crud.py  database.py  exceptions.py  main.py  models.py  schemas.py
item_warehouse/src/website/:  .prettierignore   .eslintrc.cjs  package-lock.json  package.json  tsconfig.json
item_warehouse/src/website/app/: layout.tsx  page.tsx
item_warehouse/src/website/components/: Cell.client.tsx  Sidebar.server.tsx  WarehousePage.server.tsx
item_warehouse/src/website/styles/: Cell.module.css  globals.css
item_warehouse_website/: .eslintrc.json  .stylelintrc.js  Dockerfile  Makefile  config.yaml  docker-compose.yml  next.config.js  package-lock.json  package.json  run.sh  server.ts  tsconfig.json
item_warehouse_website/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
item_warehouse_website/.next/cache/eslint/: .cache_14u77er
item_warehouse_website/.next/cache/webpack/client-production/: index.pack
item_warehouse_website/.next/server/: middleware-build-manifest.js  next-font-manifest.js
item_warehouse_website/.next/server/app/: index.rsc  page.js  page_client-reference-manifest.js
item_warehouse_website/.next/server/chunks/: 138.js  218.js  989.js
item_warehouse_website/.next/static/chunks/: 2a223334-e02db7dc47fbb02a.js  596-09bd0d44216d13d1.js  68-75aba64c9222804f.js  946-6ff2ea403f0f9ada.js  main-76408bed3d530f6c.js  main-app-adfb0034f8cb0db9.js  webpack-f77234c66256b7d7.js
item_warehouse_website/.next/static/css/: 62954b1f48ec7367.css  90f1eda63ccddb97.css
item_warehouse_website/app/: layout.tsx  page.tsx
item_warehouse_website/app/components/: Cell.client.tsx  FullContentModal.client.tsx  Item.client.tsx  Navbar.client.tsx  PageSizeDropdown.client.tsx  PageSizeDropdown.tsx  Paginator.client.tsx  SettingsContext.client.tsx  SettingsModal.client.tsx  Sidebar.client.tsx  Warehouse.client.tsx  Warehouse.server.tsx  WarehousePage.server.tsx
item_warehouse_website/app/components/Settings/: SettingsContext.client.tsx  SettingsModal.client.tsx  SettingsPanel.client.tsx  ToggleSetting.client.tsx  WarehousePanel.client.tsx  WarehouseTypeSetting.client.tsx
item_warehouse_website/app/components/Warehouse/: ActionsCell.client.tsx  Cell.client.tsx  DroppableColumnHeader.client.tsx  FullContentModal.client.tsx  Item.client.tsx  TableHeader.client.tsx  Warehouse.client.tsx  WarehousePage.server.tsx
item_warehouse_website/app/services/: api.ts
item_warehouse_website/app/styles/: Cell.module.scss  FullContentModal.module.scss  NavBar.module.scss  PageSizeDropdown.module.scss  Paginator.module.css  Paginator.module.scss  SettingsModal.module.scss  Sidebar.module.css  Sidebar.module.scss  Warehouse.module.css  Warehouse.module.scss  globals.css  layout.module.css  layout.module.scss
item_warehouse_website/app/styles/Settings/: SettingsModal.module.scss
item_warehouse_website/app/styles/Warehouse/: ActionsCell.module.scss  Cell.module.scss  DroppableColumnHeader.module.scss  TableHeader.module.scss
item_warehouse_website/app/warehouse/[warehouse]/: page.tsx
services/: api.ts
styles/: FullContentModal.module.css
(+16 files in other folders)
