[tool.poetry]
name = "addon-item-warehouse"
version = "0.1.0"
description = "Home Assistant add-on for interacting with items in a database via an API"
authors = ["Will Garside <worgarside@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "addon_item_warehouse"}]

[tool.poetry.dependencies]
python = "^3.11"
